--- a/hubla_app/server/package.json
+++ b/hubla_app/server/package.json
@@ -11,6 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:docker": "npm run dev --prefix client & npm run start:dev",
+    "migrations": "npx prisma migrate dev --name init",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
